@@ -235,5 +235,6 @@ inist-tools (0.9.11RC) RC; urgency=medium
   * [DEV] Commit -- 22/02/2017 @ 14:02:31
   * [DEV] Gource multi-dépôt
   * [DEV] Gource multi-url : fusion des logs -> une seule vidéo
+  * [DEV] Correction du bug de fusion des logs pour Gource
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
